--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "vuetify": "^0.17.6",
     "vuex": "^3.0.1"
   },
